some docker stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,36 @@
 version: "3.8"
-services: 
+services:
+    #backend API 
     face-detection-api:
         container_name: backend
-        image: node:12.18.4
         build: ./
         command: npm start
         working_dir: /usr/src/face-detection-web-site-api
+        depends_on: 
+            - database
         ports:
             - "3000:3000" 
         volumes: 
             - ./:/usr/src/face-detection-web-site-api
+
+    #Postgres
+    database:
+        image: postgres
+        environment: 
+            POSTGRES_USER: admin
+            POSTGRES_PASSWORD: password 
+            POSTGRES_DB: facedetection
+        ports: 
+            - "5432:5432"
+        volumes: 
+            - ./db_data:/var/lib/postgresql/data
+            
+    #pgAdmin4
+    #pgAdmin4:
+    #    image: dpage/pgadmin4
+     #   environment: 
+      #      PGADMIN_DEFAULT_EMAIL: gianluca.travasci@gmail.com
+        #    PGADMIN_DEFAULT_PASSWORD: Gianluca.96
+       # ports:  
+       #     -  "8889:80"
+
