--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,16 @@ version: "3.8"
 services:
     #Postgres
     database:
-        image: postgres
+        image: postgres:13
+        container_name: postgres
         environment: 
-            POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: Gianluca.96
+            POSTGRES_USER: productioncoder
             POSTGRES_DB: facedetection
-            POSTGRES_HOST: postgres
+            POSTGRES_HOST_AUTH_METHOD: trust
+            POSTGRES_PASSWORD: secret
         build: ./postgres
         ports: 
-            - "5432:5432"
+            - "2345:5432"
         
 
     #backend API 
@@ -20,8 +21,13 @@ services:
         command: npm start
         working_dir: /usr/src/face-detection-web-site-api
         environment: 
-            POSTGRES_URL: postgres://postgres:Gianluca.96@postgres:5432/facedetection
-        links:  
+            DB_URI: postgres://productioncoder:secret@postgres:5432/facedetection
+            #DB_HOST: postgres
+            #DB_NAME: facedetection
+            #DB_USER: productioncoder
+            #DB_PORT: 5432
+            #DB_PASSWORD: secret
+        depends_on: 
             - database
         ports:
             - "3000:3000" 
