--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "knex": "^0.21.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
-    "pg": "^8.3.3"
+    "pg": "^8.3.3",
+    "redis": "^3.0.2"
   }
 }
