updating token manage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     #Redis
     redis:
         image: redis
+        container_name: redis
         ports: 
             - "6379:6379"
 
